# lumina

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  compile-and-run-mmtk-syscall-linux.sh  compile-link-run.sh  compile-then-link-to-libc-and-run.sh
lumina/: Cargo.toml
lumina-compiler/: Cargo.toml
lumina-compiler/src/: fmt.rs  lib.rs  prelude.rs  target.rs
lumina-compiler/src/ast/: attr.rs  collect.rs  config.rs  entities.rs  mod.rs  resolve.rs  sources.rs
lumina-compiler/src/backend/: mod.rs
lumina-compiler/src/backend/cranelift/: abi.rs  ctx.rs  layout.rs  mod.rs  ssa.rs
lumina-compiler/src/backend/cranelift/debuginfo/: mod.rs  unwind.rs
lumina-compiler/src/backend/cranelift/ssa/: array.rs  call.rs  layout_mapping.rs  mod.rs  num.rs  pointer.rs  record.rs  sum.rs
lumina-compiler/src/debuginfo/: emit.rs  mod.rs
lumina-compiler/src/hir/: expr.rs  mod.rs  pat.rs  scope.rs  ty.rs
lumina-compiler/src/lir/: closure.rs  debug.rs  dyn_dispatch.rs  expr.rs  expr.rs.old  mod.rs  mono.rs  pat.rs  reflect.rs  ssa.rs
lumina-compiler/src/lir/ssa/: mod.rs  opts.rs  opts.rs.bak  opts.rs.less.old  rewrite.rs
lumina-compiler/src/lir/ssa/snapshots/: lumina_compiler__lir__ssa__opts__tests__fix_tail_call.snap.new  lumina_compiler__lir__ssa__opts__tests__flow_subst_block_inline.snap  lumina_compiler__lir__ssa__opts__tests__functions.snap  lumina_compiler__lir__ssa__opts__tests__inline_block.snap  lumina_compiler__lir__ssa__opts__tests__jump_subst_block_inline.snap  lumina_compiler__lir__ssa__opts__tests__practical.snap  (+2 more)
lumina-compiler/src/mir/: builtins.rs  dwarf.rs  expr.rs  func.rs  mod.rs  pat.rs  patc.rs  tcheck.rs  tyfmt.rs
lumina-compiler/src/mir/lower/: expr.rs  mod.rs
lumina-gc/: Cargo.toml  build
lumina-gc/src/: api.rs  collection.rs  lib.rs
lumina-gc/src.old/: api.rs  lib.rs
lumina-parser/: Cargo.toml
lumina-parser/src/: alias.rs  error.rs  expr.rs  func.rs  impl.rs  lexer.rs  lib.rs  pat.rs  recover.rs  shared.rs  tests.rs  ty.rs  use.rs  val.rs  when.rs
lumina-parser/src/snapshots/: lumina_parser__tests__decl_alias.snap  lumina_parser__tests__decl_from_trait.snap  lumina_parser__tests__decl_from_trait_optional_eq.snap  lumina_parser__tests__decl_impl_into.snap  lumina_parser__tests__decl_iterator.snap  lumina_parser__tests__decl_map.snap  lumina_parser__tests__decl_option.snap  lumina_parser__tests__decl_param_span.snap  lumina_parser__tests__decl_point_multi_line.snap  lumina_parser__tests__decl_point_multi_line_optional_comma.snap  lumina_parser__tests__decl_point_single_line.snap  lumina_parser__tests__decl_use_assign.snap  lumina_parser__tests__decl_use_assign_then_expose.snap  lumina_parser__tests__decl_use_expose.snap  lumina_parser__tests__decl_use_simple.snap  lumina_parser__tests__decl_use_with_annotation.snap  lumina_parser__tests__decl_val.snap  lumina_parser__tests__decl_val_annotated.snap  lumina_parser__tests__decl_when_multi_line.snap  lumina_parser__tests__decl_when_multi_line_optional_comma.snap  lumina_parser__tests__decl_when_single_line.snap  lumina_parser__tests__expr_complex_lambda.snap  lumina_parser__tests__expr_deep_set.snap  lumina_parser__tests__expr_deep_update.snap  lumina_parser__tests__expr_field_of_access.snap  lumina_parser__tests__expr_if.snap  lumina_parser__tests__expr_match.snap  lumina_parser__tests__expr_match_nested.snap  lumina_parser__tests__expr_multiple_accessors.snap  lumina_parser__tests__expr_multiple_accessors_as_param.snap  lumina_parser__tests__expr_nested_constr.snap  lumina_parser__tests__expr_nested_list.snap  lumina_parser__tests__expr_nested_tuple.snap  lumina_parser__tests__expr_pass_expr.snap  lumina_parser__tests__expr_pass_fn.snap  lumina_parser__tests__expr_pass_lambda.snap  lumina_parser__tests__expr_pass_opnum.snap  lumina_parser__tests__expr_pass_partial.snap  lumina_parser__tests__expr_pipe_eval_of_fn.snap  lumina_parser__tests__expr_pipe_eval_of_lambda.snap  (+31 more)
lumina-typesystem/: Cargo.toml
lumina-typesystem/src/: bitsize.rs  check.rs  constr.rs  fin.rs  fmt.rs  generic.rs  intsize.rs  iquery.rs  lib.rs  lib.rs.old  tenv.rs  tests.rs  transform.rs
lumina-util/: Cargo.toml
lumina-util/src/: error.rs  helpers.rs  highlight.rs  ignored.rs  lib.rs  location.rs  span.rs  test_logger.rs
lumina/src/: build.rs  cli.rs  formatter.rs  init.rs  lib.rs  main.rs
lumina/tests/: examples.rs  formatting.rs  tests.rs
lumina/tests/snapshots/: formatting__format___home__simon__code__rust__lumina__lumina__..__examples__ffi__src__main.lm.snap  formatting__format___home__simon__code__rust__lumina__lumina__..__examples__fizz-buzz__src__main.lm.snap  formatting__format___home__simon__code__rust__lumina__lumina__..__examples__hello-world__src__main.lm.snap  formatting__format___home__simon__code__rust__lumina__lumina__..__examples__lists__src__main.lm.snap  formatting__format___home__simon__code__rust__lumina__lumina__..__examples__maybe-implementation__src__main.lm.snap  formatting__format___home__simon__code__rust__lumina__lumina__..__examples__modules__src__main.lm.snap  formatting__format___home__simon__code__rust__lumina__lumina__..__examples__raw-function-pointers__src__main.lm.snap  formatting__format___home__simon__code__rust__lumina__lumina__..__examples__records__src__main.lm.snap  formatting__format___home__simon__code__rust__lumina__lumina__..__examples__records__src__main.lm.snap.new  formatting__format___home__simon__code__rust__lumina__lumina__..__examples__tuples__src__main.lm.snap  formatting__format___home__simon__down__lumina__lumina__..__examples__ffi__src__main.lm.snap  formatting__format___home__simon__down__lumina__lumina__..__examples__maybe-implementation__src__main.lm.snap  formatting__format___home__simon__down__lumina__lumina__..__examples__operators__src__main.lm.snap  formatting__format___home__simon__down__lumina__lumina__..__examples__raw-function-pointers__src__main.lm.snap  formatting__format_examples__fizz-buzz.snap  formatting__format_examples__records.snap  formatting__format_examples__tuples.snap  formatting__format_examples__using-ext-library.snap
(+360 files in other folders)
