[workspace]
members = [
    "lumina",
    "lumina-parser",
    "lumina-util",
    "lumina-key",
    "lumina-compiler",
    "lumina-typesystem",
    "lumina-collections", "lumina-tokentree", "lumina-research",
]
exclude = [
  # Compiled separately with different flags as a staticlib
  "lumina-gc"
]
resolver = "2"
