[package]
name = "lumina-compiler"
version = "0.1.0"
authors = ["Simon <simon.larsson-general@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lumina-util = { path = "../lumina-util" }
lumina-parser = { path = "../lumina-parser" }
lumina-typesystem = { path = "../lumina-typesystem" }
lumina-collections = { path = "../lumina-collections" }
target-lexicon = "0.12.*"
lumina-key = { path = "../lumina-key" }
derive-new = "0.7"
either = "1.13.0"
ibig = { version = "0.3.6", features = [], default-features = false }
owo-colors = { version = "4.0.*", features = ["supports-colors"] }
itertools = "0.10.*"
smallvec = "1.10.*"
take_mut = "*"
derive_more = { version = "1.0.*", features = ["from", "display", "index", "index_mut", "deref", "deref_mut", "add", "add_assign"] }
insta = "*"
tracing = "0.1.41"
cranelift = "0.114.*"
cranelift-entity = "0.114.*"
cranelift-codegen = "0.114.*"
cranelift-module = "0.114.*"
cranelift-object = "0.114.*"
cranelift-native = "0.114.*"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-tree = "0.4.0"
gimli = "*"
object = "*"
