[package]
name = "lumina-gc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.dev]
# panic='abort'
lto = true

[profile.release]
# panic='abort'
lto = true

[dependencies]
mmtk = "0.26.0"
log = "*"

[features]
default = []
is_mmtk_object = ["mmtk/is_mmtk_object"]
malloc_counted_size = ["mmtk/malloc_counted_size"]
