[package]
name = "lumina-parser"
version = "0.1.0"
authors = ["Simon <simon.larsson-general@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lumina-util = { path = "../lumina-util/" }
lumina-key = { path = "../lumina-key" }
itertools = "0.10.*" 
logos = { git = "https://github.com/simvux/logos" }
insta = "1.26.*"
# cranelift-entity = "0.92.*"
smallvec = "*"
tracing = "0.1.40"
