[package]
name = "lumina-typesystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cranelift-entity = "0.101.3"
itertools = "*"
lumina-util = { path = "../lumina-util" }
lumina-key = { path = "../lumina-key" }
derive_more = "*"
derive-new = "0.6"
tracing = "0.1.40"
