[package]
name = "lumina-typesystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
lumina-util = { path = "../lumina-util" }
lumina-key = { path = "../lumina-key" }
lumina-collections = { path = "../lumina-collections" }
derive_more = "*"
derive-new = "0.6"
tracing = "0.1.40"
smallvec = "*"
